# memento

./: .env  .gitignore  .syncthing..git.tmp  CLAUDE.md  Cargo.toml  LICENSE  README.md  ecosystem.config.cjs  install.bat  install.sh
docs/: architecture.md  hybrid_retrieval.md  palace_memory.md  user_guide.md
examples/: mock_ipc_memory.rs
scripts/: start_release.sh
src/: app_registry.rs  audit.rs  bio.rs  chat_memory.rs  config.rs  doc_extract.rs  document_index.rs  document_index_ipc.rs  hardware.rs  ingestion.rs  interaction_memory.rs  kg_store.rs  knowledge.rs  main.rs  metrics.rs  migrations.rs  query_cache.rs  rag_store.rs  recall_telemetry.rs  runtime_memory.rs  schema.rs  scoped_memory.rs  security.rs  semantic_memory.rs  usage_store.rs
src/scoped_memory/: compression.rs  deletion.rs  derivation.rs  embedding.rs  helpers.rs  mod.rs  parsing.rs  recall.rs  search.rs  stats.rs
templates/: dashboard.html
tests/: PROMPTS.md  ipc_integration.rs  knowledge_integration.rs  test_mcp.sh  test_memento.sh
